[package]
name = "rslcli"
version = "0.1.1"
authors = ["Armin Widegreen <armin.widegreen@gmail.com>"]
description = """
A rust command-line interface for SL (Storstockholms Lokaltrafik) - Stockholm
Public Transport.
"""

[dependencies]
reqwest = "0.9"
log= "0.4.*"
env_logger = "0.5.*"
serde = "1.0.*"
serde_json = "1.0.*"
serde_derive = "1.0.*"
chrono = { version = "*", features = ["serde"] }
clap = "2.29.*"
colored = "*"
